# audiobook-gen

./: .gitignore  README.md  audio_pipeline.py  cli.py  epub_parser.py  job_manager.py  main.py  pyproject.toml  requirements.txt  tts_client.py
static/: index.html
